--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 header{
   box-shadow: 0 1px 10px 0 lightgray;
   padding: 20px 0;
@@ -21,10 +23,6 @@ header{
       display: flex;
       align-items: center;
     
-    input{
-      width: 200px;
-    }
-    
     .fa-user-o{
       margin: 0 20px;
       padding: 2px 3px;
@@ -32,6 +30,7 @@ header{
       border-radius: 50%;
     }
     .fa-search{
+      color: $primary-color;
       position: absolute;
       right:10px;
       top: 50%;
@@ -49,6 +48,10 @@ header{
 
           a{
             padding: 10px;
+            text-decoration: none;
+            color:gray;
+            font-weight:normal;
+            border: 0;
             i{
               transform: scale(0.5);
 
