--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -22,12 +22,13 @@ section{
   padding: $section-vertical-padding 0;
 }
 
-h1{
+h1, h2, h5{
   color:$dark-purple;
 }
 
 .btn{
-  padding: 10px 40px;
+  width: 300px;
+  padding: 15px 0;
   margin: 20px 0;
   font-weight: bold;
 }
