--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -27,7 +27,7 @@ h1, h2,h3, h4, h5, h6{
 }
 
 .btn{
-  width: 300px;
+  min-width: 300px;
   padding: 15px 0;
   margin: 20px 0;
   font-weight: bold;
