--- a/src/styles/courses.scss
+++ b/src/styles/courses.scss
@@ -2,6 +2,15 @@
 
 .course-container{
   padding: 50px 0;
+  cursor: pointer;
+
+  &:hover{
+    .course-description{
+      h5{
+        color:$primary-color
+      }
+    }
+  }
 
   .course-image{
     width: 200px;
@@ -25,3 +34,4 @@
     }
   }
 }
+
