Adds Main component wich contains components in main-folder

--- a/src/styles/videosection.scss
+++ b/src/styles/videosection.scss
@@ -1,7 +1,7 @@
 .video-container{
   width: 670px;
   height: 450px;
-  background-image: url(../assets/home-2-popup-video-poster.jpg);
+  background-image: url(../../assets/home-2-popup-video-poster.jpg);
   border-radius: 10px;
   cursor: pointer;
   position: relative;
