--- a/src/styles/statistics.scss
+++ b/src/styles/statistics.scss
@@ -8,10 +8,10 @@
   .statistic{
     text-align: center;
     padding: 100px 0;
-    border: 1px solid lightgray;
+    border: 1px solid #f5f1ed;
       
       h4{
-        margin: 0 60px
+        margin: 0 70px
       }
       span{
         font-size: 60px;
