--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,4 +2,5 @@ $primary-color: #25ab94;
 $secondary-color: #aeadae;
 $dark-purple: #48495f;
 $light-gray: #f6f3f5;
+$outer-space:#2c3837;
 $section-vertical-padding: 100px;
