--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,61 +4,64 @@ header{
   box-shadow: 0 1px 10px 0 lightgray;
   padding: 20px 0;
 
-  .container{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  img{
-    width: 150px;
-    height: 25px;
-  }
-
-  nav{
+    .container{
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
-    div{
-      position:relative;
+    img{
+      width: 150px;
+      height: 25px;
+    }
+
+    a{
+      border:0;
+      color:$outer-space;
+      font-weight: 500;
+    }
+
+    nav{
       display: flex;
       align-items: center;
-    
-    .fa-user-o{
-      margin: 0 20px;
-      padding: 2px 3px;
-      border: 1px solid;
-      border-radius: 50%;
+
+      div{
+        position:relative;
+        display: flex;
+        align-items: center;
+      
+      .fa-user-o{
+        margin: 0 20px;
+        padding: 2px 3px;
+        border: 1px solid;
+        border-radius: 50%;
+      }
+      .fa-search{
+        color: $primary-color;
+        position: absolute;
+        right:10px;
+        top: 50%;
+        transform : translateY(-50%);
+      }
     }
-    .fa-search{
-      color: $primary-color;
-      position: absolute;
-      right:10px;
-      top: 50%;
-      transform : translateY(-50%);
-    }
-  }
 
-    ul{
-      list-style: none;
-      margin:0;
+      ul{
+        list-style: none;
+        margin:0;
 
-        li{
-          padding-left: 20px;
-          display: inline-block;
+          li{
+            padding-left: 20px;
+            display: inline-block;
 
-          a{
-            padding: 10px;
-            text-decoration: none;
-            color:gray;
-            font-weight:normal;
-            border: 0;
-            i{
-              transform: scale(0.5);
+            a{
+              padding: 10px;
+              text-decoration: none;
+              i{
+                transform: scale(0.5);
 
+              }
             }
           }
         }
       }
     }
-  }
 }
