Adds remaining layout shapes

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -55,3 +55,10 @@ p{
 span, small{
   color:gray;
 }
+
+.empty-circle{
+  width: 100px;
+  height: 100px;
+  border-radius: 50% ;
+  border: 15px solid;
+}
