--- a/src/styles/toplearners.scss
+++ b/src/styles/toplearners.scss
@@ -57,7 +57,7 @@
   flex-direction: column;
   align-items: center;
 
-  img{
+  .fx7,.fx8,.fx11{
     position: absolute;
   }
 
@@ -69,5 +69,13 @@
   .fx8{
     right:0;
     bottom:0;
+  }
+
+  .fx11{
+    transform: scale(0.5);
+    border-color:#e5c791;
+    left:-25px;
+    bottom:120px;
+    opacity: 0.6;
   }
 }
