Creates nav component with NavList and Searchbar sub-components, makes NavList items dynamic

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,7 +14,7 @@ ul{
 }
 
 input{
-  padding: 15px !important;
+  padding: 15px 30px!important;
   background-color:$light-gray !important;
   border: 0 !important;
 }
