--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -14,7 +14,11 @@ header{
       height: 25px;
     }
 
-    a{
+    input{
+      margin-left: 20px;
+    }
+
+    a,span{
       border:0;
       color:$outer-space;
       font-weight: 500;
@@ -29,12 +33,6 @@ header{
         display: flex;
         align-items: center;
       
-      .fa-user-o{
-        margin: 0 20px;
-        padding: 2px 3px;
-        border: 1px solid;
-        border-radius: 50%;
-      }
       .fa-search{
         color: $primary-color;
         position: absolute;
@@ -47,17 +45,25 @@ header{
       ul{
         list-style: none;
         margin:0;
+        padding:0;
+
+        .fa-user-o{
+          padding: 2px 3px;
+          border: 1px solid;
+          border-radius: 50%;
+        }
 
           li{
-            padding-left: 20px;
+            padding: 0 10px;
             display: inline-block;
 
-            a{
+            span{
               padding: 10px;
               text-decoration: none;
+              cursor:pointer;
+              
               i{
                 transform: scale(0.5);
-
               }
             }
           }
