--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -16,6 +16,10 @@ header{
 
     input{
       margin-left: 20px;
+
+      &:focus{
+        box-shadow: 0 0 0 0.25rem $primary-color;
+      }
     }
 
     a,span{
