--- a/src/styles/courses.scss
+++ b/src/styles/courses.scss
@@ -3,7 +3,7 @@
 .row{
   .course-container{
     margin-top: 50px;
-    padding: 20px 0;
+    padding:30px;
     border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.2s;
@@ -26,8 +26,8 @@
   }
 
   .course-image{
-    width: 200px;
-    height: 200px;
+    width: 170px;
+    height: 170px;
     flex-shrink: 0;
 
 
@@ -39,9 +39,11 @@
     }
 
   }
-  .course-description{
-    margin-right:60px;
 
+  small{
+    i{
+      padding-right: 5px;
+    }
   }
 }
 
