--- a/src/styles/toplearners.scss
+++ b/src/styles/toplearners.scss
@@ -2,12 +2,14 @@
   margin: 30px 50px;
   display: flex;
   gap:50px;
+  
 
   .review-card{
     width: calc(100% / 3);
     padding: 40px;
     opacity: 0.5;
-
+    transition: opacity 0.2s;
+    
     &.active{
       opacity: 1;
     }
